Fixing background colors on Safari browsers

--- a/about-me/about.css
+++ b/about-me/about.css
@@ -18,7 +18,7 @@
   margin: auto;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(0, 0, 0, 0.8);
+  background: rgb(0, 0, 0, 0.8);
   color: whitesmoke;
   padding: 30px;
   border-radius: 10px;
